# yggtorrent-search-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  tracker_list.rs  yggtorrent_client.rs  yggtorrent_params.rs
src/data_struct/: mod.rs  yggtorrent_cookie.rs  yggtorrent_ratio.rs  yggtorrent_result.rs
src/selector/: mod.rs  selector_get_ratio.rs  selector_level_1.rs  selector_level_2.rs  selector_level_3.rs
